# mock-celery-api

./: README.md  main.py  pyproject.toml  requirements.txt  start_celery.py  tasks.py  upload_file.py
