[tool.poetry]
name = "mock-celery-api"
version = "0.1.0"
description = ""
authors = ["Your Name <34923485+Haste171@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.27.1"
celery = "5.3.6"
fastapi = "^0.110.0"
python-multipart = "^0.0.9"
redis = "4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
